# Dashboard-Comercial

./: .dockerignore  .env.example  .gitignore  DashboardComercial.spec  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requests.http  version.json
app/: config.py  logging_config.py  main.py  static_front.py
docs/: EJECUTABLE_WINDOWS.md  METRICAS_ANALITICA.md  deal_analytics_evaluation_audit.md  deal_analytics_evaluation_methodology_v2.md  deal_analytics_migration_v2.md  deal_analytics_validation.json
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
launcher/: __init__.py  env.py  main.py  paths.py  server.py  updater.py  version_store.py
runtime/: pyproject.toml  version.json
scripts/: backfill_activity_columns.py  backfill_deal_owners.py  build-windows-exe.ps1  close_phase2_batched.py  close_phase2_operational.py  deploy-from-github.ps1  deploy-from-github.sh  explore_management_data.py  full_sync_hubspot.py  full_sync_local.py  init_local_database.py  package-runtime.ps1  phase2_finish_incremental.py  phase2_integrity_report.py  run_brand_benchmark_test.py  run_deal_analytics_refresh.py  sync_recent_activities.py  sync_tasks_full.py  validate_deal_analytics.py  validate_phase1.py  validate_phase2.py  verify_sql003.py  verify_sync.py
sql/: 001_initial_schema.sql  002_phase2_associations_quality.sql  003_activity_sync_columns.sql  004_dynamic_hubspot_configuration.sql  005_deal_centric_analytics.sql  006_deal_analytics_extend.sql  007_brand_stage_semantics.sql  (+3 more)
(+221 files in other folders)
